Update service
